adds db, actual endpoints, tests
